<resources>
    <string name="app_name">Radio Beit Ekstein</string>
    <string name="all_programs">All Programs</string>
    <string name="most_watched">Most Viewed</string>
    <string name="recently_added">recently added</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_First_Name">Enter your first name</string>
    <string name="First_Name">First Name</string>
    <string name="hint_enter_last_name">Enter your last name</string>
    <string name="radio_live_login_btn">Live Radio</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_radio">ActivityRadio</string>
    <string name="likes_item">Likes</string>
    <string name="comments_item">Comments</string>
    <string name="views_item">Views</string>
    <string name="hint_email_address">Enter your Email Address</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Login</string>
    <string name="not_a_member_sign_up">Not a member - Sign up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="registration">Registration</string>
    <string name="enter_your_birthday">Enter Your Birthday</string>
    <string name="reenter_your_password">ReEnter Your Password</string>
    <string name="sign_up">Sign Up</string>

    <!--//Facebook-->
    <string name="facebook_app_id" translatable="false">2326621704290575</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2326621704290575</string>
    <string name="logOutDialog">Are you sure you want to log out?</string>
    <string name="logOutSuccess">Logged out successfully!</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_screen">Main Screen</string>
    <string name="title_menu_log_out">Log Out</string>
    <string name="radio_item_duration" translatable="false">duration</string>
    <string name="title_radio_item" translatable="false">title</string>
    <string name="togglebutton_play_radio_item" translatable="false">ToggleButton</string>
    <string name="play_radio_item" translatable="false">PLAY</string>
    <string name="stop_radio_item" translatable="false">STOP</string>
    <string name="creation_date_radio_item" translatable="false">creationDate</string>
    <string name="enter_your_comment">Enter your comment…</string>
    <string name="submit">submit</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="last_shows_that_add">Last shows that add</string>
    <string name="my_lists">My Lists</string>
    <string name="title_notification">title notification</string>
    <string name="time_date">time/date</string>
    <string name="profile_name">Profile Name</string>
    <string name="description_profile">Description Profile</string>
    <string name="change_name">Change Name</string>
    <string name="change_description">Change Description</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="radio_kol_etzion">Radio Kol Etzion</string>
    <string name="logo_radio_gif">Logo Radio gif</string>
    <string name="no_favorites">You don\'t have any favorites!</string>
    <string name="no_notifications">You don\'t have notifications!</string>
    <string name="last_name">Last Name</string>
    <string name="choose_your_birth_day">Choose Your Birth Day</string>
    <string name="birth_day">Birth Day</string>
    <string name="desc_cover_image_profile">Cover Image Profile</string>
    <string name="desc_add_new_cover_image">add new cover image</string>
    <string name="desc_add_profile_image">add profile image</string>
    <string name="desc_profile_image">profile_image</string>
    <string name="change_first_name">Change first name</string>
    <string name="change_last_name">Change last name</string>
    <string name="desc_delete_radio_item_from_favorite">delete radio item from favorite</string>
    <string name="desc_close_dropdown_comment_chat">close dropdown comment chat</string>
    <string name="desc_send_comment">send comment</string>
    <string name="desc_edit_profile_details">edit profile details</string>
    <string name="string_change_email">+@string/change_email</string>
    <string name="change_email">Change Email</string>
    <string name="new_password">New password...</string>
    <string name="confirm_new_password">Confirm new password...</string>
    <string name="the_comment_of_the_user">User comment</string>
    <string name="user_name">User name</string>
    <string name="comments">Comments</string>
    <string name="close_comments">close Comments</string>
    <string name="description_about_me">Description About me</string>
    <string name="about_me">About Me</string>
    <string name="change_the_about_me">Change the About me</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="image_of_profile_in_the_toolbar">Image Of profile in the toolBar</string>
    <string name="profile">Profile</string>
    <string name="logout_in_toolbar">logout in toolbar</string>
    <string name="tell_us_a_little_about_yourself">Tell us a little about yourself</string>


</resources>
