<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvUserComment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUserComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius_border_white">


        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivImageComment"
            app:layout_constraintTop_toTopOf="@+id/ivImageComment" />

        <TextView
            android:id="@+id/tvCommentDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:text="@string/the_comment_of_the_user"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tvCommentTime"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            app:layout_constraintBottom_toBottomOf="@+id/clUserComment"/>

        <TextView
            android:id="@+id/tvCommentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/time_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivImageComment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/microphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>