<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Upper BarLayout-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shape_background_gradient"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:id="@+id/parentRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/idImageToolBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/microphone"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/image_of_profile_in_the_toolbar" />


                <TextView
                    android:id="@+id/idUserNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="22sp"
                    android:text="@string/user_name"
                    android:fontFamily="@font/boogaloo"/>

                <ImageButton
                    android:id="@+id/idLogOutBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="#00444444"
                    android:contentDescription="@string/logout_in_toolbar"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logout_icon" />





            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <!--End Upper BarLayout-->
    <!--PlayerView EXOPlayer-->
    <com.google.android.exoplayer2.ui.PlayerView

        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="79dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:repeat_toggle_modes="all|one"
        app:shutter_background_color="@color/white"
        />
        <!--bg for the exoplayer - app:shutter_background_color=""-->
    <!--PlayerView EXOPlayer-->



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background= "@drawable/shape_background_gradient"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerView">

    </androidx.viewpager.widget.ViewPager>



</androidx.constraintlayout.widget.ConstraintLayout>
